[project]
name = "robust_csv_parser"
version = "1.1.2"
authors = [{ name = "Erkka Rinne", email = "erkka.rinne@fmi.fi" }]
description = "Module for robust parsing of CSV files"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["pandas"]

[tool.setuptools]
py-modules = ["robust_csv_parser"]
